--- a/style.css
+++ b/style.css
@@ -445,7 +445,7 @@ input:checked + .slider:before {
   }
 
   body {
-    overflow: visible;
+    overflow-x: hidden;
   }
 }
 
@@ -461,7 +461,7 @@ input:checked + .slider:before {
   }
   body {
     background-color: rgb(178, 180, 185);
-    overflow: hidden;
+    overflow-x: hidden;
   }
   .first-line p {
     opacity: 0;
@@ -507,5 +507,8 @@ input:checked + .slider:before {
   }
   .copy-section {
     max-width: 300px;
+  }
+  .border-radius-data-container {
+    margin-left: 0;
   }
 }
